Bug 1766342 - Compute the process creation timestamp lazily r=glandium

This reverts bug 1751041 and adds a separate function to take the first
timestamp that was taken by a process. The latter is then used when
creating JS objects to avoid hazards warnings about allocating memory
when an object is not yet rooted.

Differential Revision: https://phabricator.services.mozilla.com/D144829